--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "hbs": "^4.2.0",
     "mongodb": "^5.4.0",
     "mongoose": "^7.1.0",
     "nodemon": "^2.0.22",
