--- a/proiect/package.json
+++ b/proiect/package.json
@@ -16,15 +16,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
-    "mongoose": "^7.1.0",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-native": "^0.71.8",
+    "react-native-event-listeners": "^1.0.7",
     "react-router-dom": "^6.11.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "react-switch": "^7.0.0",
+    "use-local-storage": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
