--- a/proiect/package.json
+++ b/proiect/package.json
@@ -16,6 +16,11 @@
     "@fullcalendar/interaction": "^6.1.7",
     "@fullcalendar/react": "^6.1.7",
     "@fullcalendar/timegrid": "^6.1.7",
+    "@syncfusion/ej2-inputs": "^21.2.6",
+    "@syncfusion/ej2-react-calendars": "^21.2.6",
+    "@syncfusion/ej2-react-dropdowns": "^21.2.6",
+    "@syncfusion/ej2-react-inputs": "^21.2.6",
+    "@syncfusion/ej2-react-schedule": "^21.2.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
