--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
     "@fullcalendar/interaction": "^6.1.7",
     "@fullcalendar/react": "^6.1.7",
     "@fullcalendar/timegrid": "^6.1.7",
+    "@syncfusion/ej2-base": "^21.2.3",
+    "@syncfusion/ej2-react-calendars": "^21.2.6",
+    "@syncfusion/ej2-react-dropdowns": "^21.2.6",
+    "@syncfusion/ej2-react-inputs": "^21.2.6",
+    "@syncfusion/ej2-react-schedule": "^21.2.6",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
